2025-03-21  Zhengyi Fu  <i@fuzy.me>

	* init.el <consult-eglot>: Remap `xref-find-apropos' to
	`consult-eglot-symbols' in `eglot-mode-map'.

2025-03-21  Zhengyi Fu  <i@fuzy.me>

	* init.el (+prism--set-colors): Blend string colors with the
	foreground color instead of white.

2025-03-21  Zhengyi Fu  <i@fuzy.me>

	Rename `consult-eglot--async-wrap' to `+consult--async-wrap--split-space'

	* init.el (+consult--async-wrap--split-space): Renamed from
	`consult-eglot--async-wrap'.  The only caller is changed.

2025-03-21  Zhengyi Fu  <i@fuzy.me>

	Add package `prism'

	* packages.el (prism): Add package.

	* init.el: Add `prism-mode' to `eglot-managed-mode-hook'.
	(+prism--set-colors): New function.  Call it after loading prism.
	(+prism--enable-theme-f): New function.  Added to `enable-theme-functions'.

2025-03-19  Zhengyi Fu  <i@fuzy.me>

	* init.el (+citre/remove-tags-file): New command.

2025-03-19  Zhengyi Fu  <i@fuzy.me>

	Add a hook that is run after vc-dwim --commit succeeds

	* init.el (vc-dwim-post-commit-hook): New variable. Add
	`vc-refresh-state' and `magit-refresh'.
	(add-log/vc-dwim-commit): Run `vc-dwim-post-commit-hook' if
	success.

2025-03-19  Zhengyi Fu  <i@fuzy.me>

	Scroll the window so that current line is at top 30% after jumping

	* init.el (+recenter-top-30%): New function.
	(consult-after-jump-hook, xref-after-jump-hook)
	(xref-after-return-hook): Add it and remove `recenter'.

2025-03-18  Zhengyi Fu  <i@fuzy.me>

	* init.el (add-log/vc-dwim-commit): Signal a user-error if vc-dwim
	exits with non-zero values.

2025-03-18  Zhengyi Fu  <i@fuzy.me>

	Add convenient command for vc-dwim

	* init.el (add-log/vc-dwim-commit): New command.
	Bind "C-c RET" to this command in `change-log-mode-map'.

2025-03-18  Zhengyi Fu  <i@fuzy.me>

	Autoload should not contain .elc? suffixes

	* templates/emacs-lisp.eld <autoloadf>: Remove suffixe from the
	file name.

2025-03-18  Zhengyi Fu  <i@fuzy.me>

	Recenter after jumping through Xref
